--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "app"}]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+lxml = "^5.4.0"
 
 [tool.poetry.group.dev.dependencies]
 
