auto timezone detection for health db

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ uvicorn = "^0.34.3"
 streamlit = "^1.45.1"
 python-dotenv = "^1.1.0"
 requests = "^2.32.4"
+langchain-community = "^0.3.25"
 
 [tool.poetry.group.dev.dependencies]
 
