--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ streamlit = "^1.45.1"
 python-dotenv = "^1.1.0"
 requests = "^2.32.4"
 langchain-community = "^0.3.25"
+langgraph = "^0.4.8"
+langgraph-checkpoint-sqlite = "^2.0.10"
 
 [tool.poetry.group.dev.dependencies]
 
