provider switching Docker ENV VAR override logic

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,11 @@ langchain-community = "^0.3.25"
 langgraph = "^0.4.8"
 langgraph-checkpoint-sqlite = "^2.0.10"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.0.0"
+pytest-asyncio = "^0.24.0"
+httpx = "^0.28.0"  # For FastAPI testing
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
