--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,13 @@ services:
       - OLLAMA_BASE_URL=http://localhost:11434
       - OLLAMA_MODEL=llama3.2:3b
       - DATABASE_PATH=/app/data/lifebuddy.db
+      # Uncomment and add your API keys to use external providers:
+      # - OPENAI_API_KEY=your_openai_key_here
+      # - ANTHROPIC_API_KEY=your_anthropic_key_here  
+      # - GOOGLE_API_KEY=your_google_key_here
+      # - AZURE_OPENAI_API_KEY=your_azure_key_here
+      # - AZURE_OPENAI_ENDPOINT=your_azure_endpoint_here
+      # - AZURE_OPENAI_DEPLOYMENT=your_azure_deployment_here
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health/status"]
