--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   lifebuddy:
     build: .
@@ -7,7 +5,6 @@ services:
     ports:
       - "8000:8000"   # FastAPI backend
       - "8501:8501"   # Streamlit frontend
-      - "11434:11434" # Ollama API (optional external access)
     volumes:
       # Mount data directory for persistence
       - ./data:/app/data
@@ -15,7 +12,7 @@ services:
       - ~/Downloads:/host/Downloads:ro  # Read-only access to Downloads
     environment:
       - LLM_PROVIDER=ollama
-      - OLLAMA_BASE_URL=http://localhost:11434
+      - OLLAMA_BASE_URL=http://host.docker.internal:11434
       - OLLAMA_MODEL=llama3.2:3b
       - DATABASE_PATH=/app/data/lifebuddy.db
       # Uncomment and add your API keys to use external providers:
@@ -31,13 +28,16 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 60s
-    # Resource limits (adjust based on your system)
+      start_period: 30s
+    # Resource limits (reduced since no Ollama)
     deploy:
       resources:
         limits:
-          memory: 4G
-          cpus: '2.0'
-        reservations:
           memory: 2G
-          cpus: '1.0' 
+          cpus: '1.0'
+        reservations:
+          memory: 1G
+          cpus: '0.5'
+    # Enable host networking for Ollama connection
+    extra_hosts:
+      - "host.docker.internal:host-gateway" 
