--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,20 @@
 # Gitignore patterns 
 
-# Data and logs directories
-data/
-logs/
+
+# Exclude all data files but keep folder structure
+data/**/*
+!data/
+!data/.gitkeep
+!data/raw/
+!data/raw/.gitkeep
+!data/raw/apple_health_export/
+!data/raw/apple_health_export/.gitkeep
+
+
+# Exclude all log files but keep folder structure
+logs/**/*
+!logs/
+!logs/.gitkeep
 
 
 # Poetry and Python environment
