--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ lxml = "^5.4.0"
 langchain = "^0.3.25"
 langchain-openai = "^0.3.24"
 langchain-ollama = "^0.3.3"
+langchain-anthropic = "^0.3.0"
+langchain-google-genai = "^2.1.0"
 fastapi = "^0.115.13"
 uvicorn = "^0.34.3"
 streamlit = "^1.45.1"
